# storage/api-docs/api-docs.json
@@ -1093,6 +1093,78 @@
                 }
             }
         },
+        "/api/post/delete/{id}": {
+            "delete": {
+                "tags": [
+                    "posts"
+                ],
+                "summary": "Delete Post ",
+                "description": "Multiple status values can be provided with comma separated string",
+                "operationId": "deletePost",
+                "parameters": [
+                    {
+                        "name": "status",
+                        "in": "query",
+                        "description": "Status values that needed to be considered for filter",
+                        "required": true,
+                        "explode": true,
+                        "schema": {
+                            "type": "string",
+                            "default": "available",
+                            "enum": [
+                                "available",
+                                "pending",
+                                "sold"
+                            ]
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "400": {
+                        "description": "Invalid status value"
+                    }
+                }
+            }
+        },
+        "/api/post/show/{id}": {
+            "get": {
+                "tags": [
+                    "posts"
+                ],
+                "summary": "Show Post ",
+                "description": "Multiple status values can be provided with comma separated string",
+                "operationId": "showPost",
+                "parameters": [
+                    {
+                        "name": "status",
+                        "in": "query",
+                        "description": "Status values that needed to be considered for filter",
+                        "required": true,
+                        "explode": true,
+                        "schema": {
+                            "type": "string",
+                            "default": "available",
+                            "enum": [
+                                "available",
+                                "pending",
+                                "sold"
+                            ]
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "400": {
+                        "description": "Invalid status value"
+                    }
+                }
+            }
+        },
         "/api/friend/list/friend-list/{id}": {
             "get": {
                 "tags": [
